<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/ic_info_outline_black_24dp"
                    android:title="@string/menu_info"/>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@drawable/common_full_open_on_phone"
                    android:title="@string/menu_log_out"/>
            </group>
        </menu>
    </item>

</menu>
